# python-project-lvl2

./: .gitignore  Makefile  README.md  gendiff.py  pyproject.toml
gendiff/scripts/: gendiff.py
