[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = "Educational project with difference between files."
authors = ["Mikhail Korolkevich <m.korolkevich@xsolla.com>"]
packages = [
    { include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
importlib-metadata = "^3.4.0"
asciinema = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"